# android_ad_box

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle  使用说明文档.doc  音视频播放APP通讯协议.docx
AndroidAsync/src/com/koushikdutta/async/future/: ThenCallback.java  TransformFuture.java
AndroidAsync/src/com/koushikdutta/async/parser/: StringParser.java
AndroidAsync/src/com/koushikdutta/async/util/: Charsets.java
apache-ftpserver-1.1.1/: build.gradle
apache-ftpserver-1.1.1/core/src/main/java/org/apache/ftpserver/impl/: IODataConnection.java
app/: CMakeLists.txt  build.gradle  cameraInfo.json  platform.keystore  platform.keystore.bak  proguard-rules.pro
app/src/androidTest/java/com/cow/liucy/face/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/cow/liucy/box/: AppMain.java
app/src/main/java/com/cow/liucy/box/model/: ConfigHttpResult.java  ConfigValue.java  UploadPicInfo.java
app/src/main/java/com/cow/liucy/box/model/qy/: AlarmInfoPlate.java  Location.java  PlateResult.java  QYPlateInfo.java  RECT.java  Result.java  TimeStamp.java  Timeval.java
app/src/main/java/com/cow/liucy/box/receiver/: BootReceiver.java
app/src/main/java/com/cow/liucy/box/service/: CowService.java  FileUploadEvent.java  RebootEvent.java  UdiskEvent.java
app/src/main/java/com/cow/liucy/box/service/dns/: CowDNSService.java  CowDSNDto.java  DeviceInfo.java
app/src/main/java/com/cow/liucy/box/ui/: MainActivity.java  SysConfig.java
app/src/main/res/anim/: in_from_left.xml  in_from_right.xml  out_to_left.xml  out_to_right.xml
app/src/main/res/layout/: activity_main.xml  layout_simple_exo_player_view.xml
app/src/main/res/values/: attrs.xml  colors.xml  strings.xml  styles.xml
app/src/test/java/com/cow/liucy/face/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
libcommon/: build.gradle
libcommon/objectbox-models/: default.json
libcommon/src/androidTest/java/com/cow/liucy/hdxm/libcommon/: ExampleInstrumentedTest.java
libcommon/src/main/: AndroidManifest.xml
libcommon/src/main/java/com/cow/liucy/libcommon/api/: CommonConfig.java
libcommon/src/main/java/com/cow/liucy/libcommon/base/: BaseActivity.java  BaseApplication.java
libcommon/src/main/res/drawable/: common_layout_select_bg.xml  common_layout_tran_bg.xml
libcommon/src/main/res/layout/: common_setting_topbar.xml
libcommon/src/main/res/raw/: voice_list.txt
libcommon/src/main/res/values/: colors.xml  strings.xml  styles.xml
module_huoyan/: build.gradle
module_huoyan/src/androidTest/java/com/cow/liucy/huoyan/: ExampleInstrumentedTest.java
module_huoyan/src/main/: AndroidManifest.xml
module_huoyan/src/test/java/com/cow/liucy/huoyan/: ExampleUnitTest.java
(+145 files in other folders)
